<resources>
    <string name="app_name">Quit Smoking</string>
    <string name="txt_smokingbehaviors">Former Smoking Behaviors</string>
    <string name="txt_cigarettesday">Cigarettes/Day</string>
    <string name="txt_nicotine">Nicotine (mg)</string>
    <string name="txt_tar">Tar (mg)</string>
    <string name="txt_carbonmonoxide">Carbon Monoxide (mg)</string>
    <string name="txt_cigarettepack">Cigarettes/Pack</string>
    <string name="txt_pricepack">Price/Pack (€)</string>
    <string name="txt_yearssmoked">For how many years did you smoke?</string>
    <string name="txt_datequitting">Date of Quitting</string>
    <string name="hint_EnterDate">Enter Date</string>
    <string name="btn_choose">Choose</string>
    <string name="txt_sinceQuittingToSmoke">Since Quitting To Smoke</string>
    <string name="txt_smokingHistory">Your Smoking History</string>
    <string name="txt_toxinsNotInhaled">Toxins Not Inhaled</string>
    <string name="txt_whatYouGetBack">What You Get Back</string>
    <string name="txt_timeframe">Time Frame</string>
    <string name="txt_money">Money</string>
    <string name="txt_perWeek">Per Week</string>
    <string name="txt_perMonth">Per Month</string>
    <string name="txt_perYear">Per Year</string>
    <string name="txt_5Years">5 Years</string>
    <string name="txt_10Years">10 Years</string>
    <string name="txt_20Years">20 Years</string>
    <string name="txt_smelltaste">Your ability to smell and taste improves</string>
    <string name="txt_nicotineinblood">No nicotine in blood</string>
    <string name="txt_heartDisease">50% risk reduction for coronary heart diseases</string>
    <string name="txt_skin">Healthier skin appearance</string>
    <string name="txt_breath">Shortness of breath decreases</string>
    <string name="txt_cancerRisk">50% cancer risk reduction</string>
    <string name="txt_statistics">Statistics</string>
    <string name="txt_body">Body</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_quitsmoking">Quit Smoking</string>
    <string name="txt_done">Done</string>
    <string name="txt_notsmokingsince">Not smoking since:</string>
    <string name="txt_moneysaved">Money saved:</string>
    <string name="txt_cigarettesnotsmoked">Cigarettes not smoked:</string>
    <string name="txt_lifetimesaved">Lifetime saved:</string>
    <string name="txt_days">days</string>
    <string name="txt_minutes">minutes</string>
    <string name="txt_cigarettes">cigarettes</string>
    <string name="txt_mgtar">mg tar</string>
    <string name="txt_mgnicotine">mg nicotine</string>
    <string name="doubleformat">0.9"</string>
    <string name="doubleformattext">%.1f</string>
</resources>
