<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".gui.SecondActivity">

    <TextView
        android:id="@+id/txtMainHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/txt_smokingbehaviors"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="fill"
            android:text="@string/txt_cigarettesday"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnMinusNoCigarettesDay"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:tint="@android:color/black"
            android:visibility="visible"
            app:backgroundTint="@android:color/darker_gray"
            app:fabSize="mini"
            app:maxImageSize="18dp"
            app:srcCompat="@android:drawable/button_onoff_indicator_on"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/txt_noCigarettesDay"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="12"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnPlusNoCigarettesDay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:tint="@android:color/black"
            android:visibility="visible"
            app:backgroundTint="@android:color/darker_gray"
            app:fabSize="mini"
            app:maxImageSize="24dp"
            app:srcCompat="@android:drawable/ic_input_add"
            app:useCompatPadding="false"
            tools:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="fill"
            android:text="@string/txt_nicotine"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnMinusNicotine"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:tint="@android:color/black"
            android:visibility="visible"
            app:backgroundTint="@android:color/darker_gray"
            app:fabSize="mini"
            app:maxImageSize="18dp"
            app:srcCompat="@android:drawable/button_onoff_indicator_on"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/txt_nicotine"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="12"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnPlusNicotine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:tint="@android:color/black"
            android:visibility="visible"
            app:backgroundTint="@android:color/darker_gray"
            app:fabSize="mini"
            app:maxImageSize="24dp"
            app:srcCompat="@android:drawable/ic_input_add"
            app:useCompatPadding="false"
            tools:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="fill"
            android:text="@string/txt_tar"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnMinusTar"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:tint="@android:color/black"
            android:visibility="visible"
            app:backgroundTint="@android:color/darker_gray"
            app:fabSize="mini"
            app:maxImageSize="18dp"
            app:srcCompat="@android:drawable/button_onoff_indicator_on"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/txt_tar"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="12"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnPlusTar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:tint="@android:color/black"
            android:visibility="visible"
            app:backgroundTint="@android:color/darker_gray"
            app:fabSize="mini"
            app:maxImageSize="24dp"
            app:srcCompat="@android:drawable/ic_input_add"
            app:useCompatPadding="false"
            tools:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="fill"
            android:text="@string/txt_carbonmonoxide"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnMinusCarbonMonoxide"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:tint="@android:color/black"
            android:visibility="visible"
            app:backgroundTint="@android:color/darker_gray"
            app:fabSize="mini"
            app:maxImageSize="18dp"
            app:srcCompat="@android:drawable/button_onoff_indicator_on"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/txt_carbonMonoxide"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="12"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnPlusCarbonMonoxide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:tint="@android:color/black"
            android:visibility="visible"
            app:backgroundTint="@android:color/darker_gray"
            app:fabSize="mini"
            app:maxImageSize="24dp"
            app:srcCompat="@android:drawable/ic_input_add"
            app:useCompatPadding="false"
            tools:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="fill"
            android:text="@string/txt_pricepack"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txt_pricePerPack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="fill"
            android:text="@string/txt_cigarettepack"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnMinusNoCigarettesPack"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:tint="@android:color/black"
            android:visibility="visible"
            app:backgroundTint="@android:color/darker_gray"
            app:fabSize="mini"
            app:maxImageSize="18dp"
            app:srcCompat="@android:drawable/button_onoff_indicator_on"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/txt_noCigarettesPack"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="12"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnPlusNoCigarettesPack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:tint="@android:color/black"
            android:visibility="visible"
            app:backgroundTint="@android:color/darker_gray"
            app:fabSize="mini"
            app:maxImageSize="24dp"
            app:srcCompat="@android:drawable/ic_input_add"
            app:useCompatPadding="false"
            tools:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="fill"
            android:text="@string/txt_yearssmoked"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnMinusYearsSmoked"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:tint="@android:color/black"
            android:visibility="visible"
            app:backgroundTint="@android:color/darker_gray"
            app:fabSize="mini"
            app:maxImageSize="18dp"
            app:srcCompat="@android:drawable/button_onoff_indicator_on"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/txt_yearsSmoked"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="12"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnPlusYearsSmoked"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:tint="@android:color/black"
            android:visibility="visible"
            app:backgroundTint="@android:color/darker_gray"
            app:fabSize="mini"
            app:maxImageSize="24dp"
            app:srcCompat="@android:drawable/ic_input_add"
            app:useCompatPadding="false"
            tools:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="fill"
            android:text="@string/txt_datequitting"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnChoose"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_choose"
            android:textSize="12sp"
            android:background="@drawable/allroundedcornersbutton"/>

        <EditText
            android:id="@+id/txt_dateOfQuitting"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_EnterDate"
            android:inputType="date"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>